baml_language/crates/baml_tests/snapshots/error_cases/baml_tests__error_cases__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR ITEMS ===
function Broken.MixedLiteralAndTyped(x: int) -> string {
    match (x) {
        42 | n: int => "mixed",
    }
}

function Broken.Invalid() -> <unknown> {
}

function Broken.BadUnionPattern(x: int | bool) -> string {
    match (x) {
        a: int | b => <missing>,
        bool => "bad",
    }
}

class Broken {
  field: int
}

class stream.Broken {
  field: null | int
}
