baml_language/crates/baml_tests/snapshots/error_cases/baml_tests__error_cases__04_5_mir.snap
---
source: target/debug/build/baml_tests-5f3cea2866046cb1/out/generated_tests.rs
expression: output
---
=== MIR ===
fn Broken.MixedLiteralAndTyped(x: int) -> string {
    // Locals:
    let _0: string // return
    let _1: int // x // param
    let _2: bool
    let _3: bool
    let _4: int // n

    bb0: {
        _2 = copy _1 == const 42_i64;
        branch copy _2 -> [bb4, bb5];
    }

    bb1: {
        return;
    }

    bb2: {
        goto -> bb1;
    }

    bb3: {
        unreachable;
    }

    bb4: {
        _0 = const "mixed";
        goto -> bb2;
    }

    bb5: {
        _3 = is_type(copy _1, Int);
        branch copy _3 -> [bb6, bb3];
    }

    bb6: {
        _4 = copy _1;
        goto -> bb4;
    }

}

fn Broken.Invalid() -> null {
    // Locals:
    let _0: null // return

    bb0: {
        _0 = const null;
        goto -> bb1;
    }

    bb1: {
        return;
    }

}

fn Broken.BadUnionPattern:
  (no MIR due to errors: missing expression at file 0:0..0)
