baml_language/crates/baml_tests/snapshots/error_cases/baml_tests__error_cases__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn Broken.MixedLiteralAndTyped(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: bool
    let _3: bool

    bb0: {
        _2 = copy _1 == const 42_i64;
        branch copy _2 -> [bb3, bb1];
    }

    bb1: {
        _3 = is_type(copy _1, Int { attr: TyAttr(None) });
        branch copy _3 -> [bb3, bb2];
    }

    bb2: {
        goto -> bb4;
    }

    bb3: {
        _0 = const "mixed";
        goto -> bb4;
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn Broken.BadUnionPattern(x: int | bool) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int | bool // x // param
    let _2: bool
    let _3: null

    bb0: {
        _2 = is_type(copy _1, Union([Int { attr: TyAttr(None) }, Void { attr: TyAttr(None) }], TyAttr(None)));
        branch copy _2 -> [bb5, bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        _0 = const "bad";
        goto -> bb3;
    }

    bb3: {
        goto -> bb4;
    }

    bb4: {
        return;
    }

    bb5: {
        _3 = call const fn baml.sys.panic(const "parse error") -> [bb6];
    }

    bb6: {
        unreachable;
    }
}

fn Broken.Invalid() -> null {
    // Locals:
    let _0: null // _0 // return

    bb0: {
        _0 = const null;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
