baml_language/crates/baml_tests/snapshots/error_cases/baml_tests__error_cases__04_thir.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
  Function Invalid:
    Return: Void
