baml_language/crates/baml_tests/snapshots/error_cases/baml_tests__error_cases__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Broken {
  field: int
}
function user.Broken.Invalid() -> ? throws never {
  { : void
  }
}
function user.Broken.BadUnionPattern(x: int | bool) -> string throws never {
  { : unknown | "bad"
    match (x : int | bool) : unknown | "bad"
      a: int | b =>
        <missing> : unknown
      bool =>
        "bad" : "bad"
  }
  !! 664..669: unresolved type: b
  !! 619..675: unreachable arm
}
function user.Broken.MixedLiteralAndTyped(x: int) -> string throws never {
  { : "mixed"
    match (x : int) : "mixed"
      42 | n: int =>
        "mixed" : "mixed"
  }
}
class user.Broken$stream {
  field: null | int
}
