baml_language/crates/baml_tests/snapshots/error_cases/baml_tests__error_cases__05_diagnostics.snap
---
source: target/debug/build/baml_tests-40b0bd756827c945/out/generated_tests.rs
expression: output
---
=== DIAGNOSTICS ===
  [parse] Error: Expected function name, found integer
   ╭─[ syntax_errors.baml:6:10 ]
   │
 6 │ function 123Invalid() {}
   │          ─┬─  
   │           ╰─── Expected function name, found integer
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Expected return type (->), found '{'
   ╭─[ syntax_errors.baml:6:23 ]
   │
 6 │ function 123Invalid() {}
   │                       ┬  
   │                       ╰── Expected return type (->), found '{'
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Expected '=>' after pattern, found ':'
    ╭─[ syntax_errors.baml:18:19 ]
    │
 18 │         a: int | b: bool => "bad"
    │                   ┬  
    │                   ╰── Expected '=>' after pattern, found ':'
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected expression, found ':'
    ╭─[ syntax_errors.baml:18:19 ]
    │
 18 │         a: int | b: bool => "bad"
    │                   ┬  
    │                   ╰── Expected expression, found ':'
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected '}', found EOF
    ╭─[ syntax_errors.baml:27:1 ]
    │
 27 │ }
    │ ┬  
    │ ╰── Expected '}', found EOF
    │ 
    │ Note: Error code: E0010
────╯
