baml_language/crates/baml_tests/snapshots/error_cases/baml_tests__error_cases__05_diagnostics2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: unresolved type: T
   ╭─[ containers.baml:6:35 ]
   │
 6 │   function at(self, index: int) -> T? {
   │                                   ─┬─  
   │                                    ╰─── unresolved type: T
   │ 
   │ Note: Error code: E0002
───╯

  [type] Error: unresolved type: T
    ╭─[ containers.baml:11:28 ]
    │
 11 │   function push(self, item: T) -> int {
    │                            ─┬  
    │                             ╰── unresolved type: T
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: T
    ╭─[ containers.baml:16:24 ]
    │
 16 │   function pop(self) -> T? {
    │                        ─┬─  
    │                         ╰─── unresolved type: T
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: T
    ╭─[ containers.baml:20:31 ]
    │
 20 │   function concat(self, other: T[]) -> T[] {
    │                               ──┬─  
    │                                 ╰─── unresolved type: T
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: T
    ╭─[ containers.baml:20:39 ]
    │
 20 │   function concat(self, other: T[]) -> T[] {
    │                                       ──┬─  
    │                                         ╰─── unresolved type: T
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: T
    ╭─[ containers.baml:24:28 ]
    │
 24 │   function reverse(self) -> T[] {
    │                            ──┬─  
    │                              ╰─── unresolved type: T
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: T
    ╭─[ containers.baml:28:48 ]
    │
 28 │   function slice(self, start: int, end: int) -> T[] {
    │                                                ──┬─  
    │                                                  ╰─── unresolved type: T
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: K
    ╭─[ containers.baml:44:26 ]
    │
 44 │   function has(self, key: K) -> bool {
    │                          ─┬  
    │                           ╰── unresolved type: K
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: K
    ╭─[ containers.baml:49:25 ]
    │
 49 │   function keys(self) -> K[] {
    │                         ──┬─  
    │                           ╰─── unresolved type: K
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: V
    ╭─[ containers.baml:53:27 ]
    │
 53 │   function values(self) -> V[] {
    │                           ──┬─  
    │                             ╰─── unresolved type: V
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: K
    ╭─[ containers.baml:58:26 ]
    │
 58 │   function set(self, key: K, value: V) -> null {
    │                          ─┬  
    │                           ╰── unresolved type: K
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: V
    ╭─[ containers.baml:58:36 ]
    │
 58 │   function set(self, key: K, value: V) -> null {
    │                                    ─┬  
    │                                     ╰── unresolved type: V
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: K
    ╭─[ containers.baml:63:26 ]
    │
 63 │   function get(self, key: K) -> V? {
    │                          ─┬  
    │                           ╰── unresolved type: K
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: V
    ╭─[ containers.baml:63:32 ]
    │
 63 │   function get(self, key: K) -> V? {
    │                                ─┬─  
    │                                 ╰─── unresolved type: V
    │ 
    │ Note: Error code: E0002
────╯

  [type] Error: unresolved type: T
   ╭─[ core.baml:2:29 ]
   │
 2 │ function deep_copy<T>(value: T) -> T {
   │                             ─┬  
   │                              ╰── unresolved type: T
   │ 
   │ Note: Error code: E0002
───╯

  [type] Error: unresolved type: T
   ╭─[ core.baml:2:35 ]
   │
 2 │ function deep_copy<T>(value: T) -> T {
   │                                   ─┬  
   │                                    ╰── unresolved type: T
   │ 
   │ Note: Error code: E0002
───╯

  [type] Error: unresolved type: T
   ╭─[ core.baml:7:27 ]
   │
 7 │ function deep_equals<T>(a: T, b: T) -> bool {
   │                           ─┬  
   │                            ╰── unresolved type: T
   │ 
   │ Note: Error code: E0002
───╯

  [type] Error: unresolved type: T
   ╭─[ core.baml:7:33 ]
   │
 7 │ function deep_equals<T>(a: T, b: T) -> bool {
   │                                 ─┬  
   │                                  ╰── unresolved type: T
   │ 
   │ Note: Error code: E0002
───╯

  [type] Error: unresolved type: T
   ╭─[ unstable.baml:2:26 ]
   │
 2 │ function string<T>(value: T) -> string {
   │                          ─┬  
   │                           ╰── unresolved type: T
   │ 
   │ Note: Error code: E0002
───╯

  [parse] Error: Expected function name, found integer
   ╭─[ syntax_errors.baml:6:10 ]
   │
 6 │ function 123Invalid() {}
   │          ─┬─  
   │           ╰─── Expected function name, found integer
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Expected return type (->), found '{'
   ╭─[ syntax_errors.baml:6:23 ]
   │
 6 │ function 123Invalid() {}
   │                       ┬  
   │                       ╰── Expected return type (->), found '{'
   │ 
   │ Note: Error code: E0010
───╯

  [type] Error: unreachable arm
    ╭─[ syntax_errors.baml:16:52 ]
    │
 16 │ ╭─▶ function BadUnionPattern(x: int | bool) -> string {
    ┆ ┆   
 19 │ ├─▶     }
    │ │           
    │ ╰─────────── unreachable arm
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: unresolved type: bool
    ╭─[ syntax_errors.baml:16:52 ]
    │
 16 │ ╭─▶ function BadUnionPattern(x: int | bool) -> string {
    ┆ ┆   
 19 │ ├─▶     }
    │ │           
    │ ╰─────────── unresolved type: bool
    │     
    │     Note: Error code: E0001
────╯

  [type] Error: unresolved type: bool
    ╭─[ syntax_errors.baml:16:52 ]
    │
 16 │ ╭─▶ function BadUnionPattern(x: int | bool) -> string {
    ┆ ┆   
 19 │ ├─▶     }
    │ │           
    │ ╰─────────── unresolved type: bool
    │     
    │     Note: Error code: E0001
────╯

  [parse] Error: Expected '=>' after pattern, found ':'
    ╭─[ syntax_errors.baml:18:19 ]
    │
 18 │         a: int | b: bool => "bad"
    │                   ┬  
    │                   ╰── Expected '=>' after pattern, found ':'
    │ 
    │ Note: Error code: E0010
────╯

  [parse] Error: Expected expression, found ':'
    ╭─[ syntax_errors.baml:18:19 ]
    │
 18 │         a: int | b: bool => "bad"
    │                   ┬  
    │                   ╰── Expected expression, found ':'
    │ 
    │ Note: Error code: E0010
────╯

  [type] Error: unresolved type: b
    ╭─[ syntax_errors.baml:18:29 ]
    │
 18 │         a: int | b: bool => "bad"
    │                             ──┬──  
    │                               ╰──── unresolved type: b
    │ 
    │ Note: Error code: E0001
────╯

  [parse] Error: Expected '}', found EOF
    ╭─[ syntax_errors.baml:27:1 ]
    │
 27 │ }
    │ ┬  
    │ ╰── Expected '}', found EOF
    │ 
    │ Note: Error code: E0010
────╯
