baml_language/crates/baml_tests/snapshots/error_cases/baml_tests__error_cases__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.Broken.BadUnionPattern(x: int | bool) -> string {
    load_var x
    is_type ?0
    pop_jump_if_false L0
    jump L3

  L0:
    load_var x
    pop 1
    load_const false
    pop_jump_if_false L1
    jump L3

  L1:
    load_var x
    is_type ?2
    pop_jump_if_false L2

  L2:
    load_const "bad"
    return

  L3:
    load_const "parse error"
    call baml.sys.panic
    pop 1
    jump L4

  L4:
    unreachable
}

function user.Broken.Invalid() -> null {
    load_const null
    return
}

function user.Broken.MixedLiteralAndTyped(x: int) -> string {
    load_var x
    load_const 42
    cmp_op ==
    pop_jump_if_false L0
    jump L1

  L0:
    load_var x
    is_type ?1
    pop_jump_if_false L1

  L1:
    load_const "mixed"
    return
}
